llvm/dev/boolcallcalleeexpr.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/boolcallcalleeexpr.llvm:10:20: error: use of undefined value '%end'
  br i1 %a2, label %end, label %ifright
                   ^
